<resources>
    <string name="app_name">Vonage Branded Call</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="vonage">Vonage</string>
    <string name="signin">Sign-In</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="sample_phone_number">6512345678</string>
    <string name="region">Region</string>
    <string name="pin">Pin</string>
    <string name="call_a_user">Call a user</string>
    <string name="call">Call</string>
    <string name="call_icon">Call icon</string>
    <string name="hangup">Hangup</string>
    <string name="answer">Answer</string>
    <string name="reject">Reject</string>
    <string name="enter_pin">Enter pin</string>
    <string name="answered">Answered</string>
    <string name="waiting_incoming_call">Waiting Incoming Call...</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="logged_in">Logged In:</string>
    <string name="speaker">speaker</string>
    <string name="mute">mute</string>
    <string name="call_log">Call Log</string>
    <string name="department">Department:</string>
    <string name="customer_support">Customer Support</string>
</resources>