<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout = "@layout/app_bar"
            android:id="@+id/tbLogin" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/svLogin"
        android:layout_marginTop="72dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clLogin"
            tools:context=".views.LoginActivity">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clSignInForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="42dp"
                android:paddingRight="42dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="visible">
                <TextView
                    android:id="@+id/tvSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="48dp"
                    android:text="@string/signin"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvDisplayName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/tvDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/etDisplayName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignIn" />

                <EditText
                    android:id="@+id/etDisplayName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:autofillHints="name"
                    android:background="@drawable/corner_background"
                    android:hint="@string/enter_your_name"
                    android:inputType="text"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    app:layout_constraintBottom_toTopOf="@+id/tvPhoneNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvDisplayName" />

                <TextView
                    android:id="@+id/tvPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_marginTop="24dp"
                    app:layout_constraintBottom_toTopOf="@+id/etPhoneNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDisplayName" />

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="4dp"
                    android:autofillHints="name"
                    android:background="@drawable/corner_background"
                    android:hint="@string/sample_phone_number"
                    android:inputType="number"
                    android:paddingLeft="8sp"
                    android:paddingRight="8sp"
                    app:layout_constraintBottom_toTopOf="@+id/btLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber" />
                <Button
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:layout_marginTop="48dp"
                    android:backgroundTint="@android:color/black"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ProgressBar
                android:id="@+id/pbLogin"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                >
            </ProgressBar>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
