<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/clCallStatus"
    android:tag="fragmentIdleCall"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="42dp"
    android:paddingRight="42dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clOutboundCall">
        <TextView
            android:id="@+id/tvLoggedInTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logged_in"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvLoggedInDisplayName"
            />
        <TextView
            android:id="@+id/tvLoggedInDisplayName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="User1"
            android:layout_marginTop="8dp"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLoggedInTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvLoggedInPhone"
            />
        <TextView
            android:id="@+id/tvLoggedInPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="6512345678"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvLoggedInDisplayName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOutboundCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clUserInfo">
        <TextView
            android:id="@+id/tvDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/spDepartment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <Spinner
            android:id="@+id/spDepartment"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            style="@style/Widget.AppCompat.DropDownItem.Spinner"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvDepartment"
            >
        </Spinner>
        <Button
            android:id="@+id/btCall"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="@android:color/holo_green_dark"
            android:text="@string/call"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spDepartment" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>